# wpp-manager-api

./: .env.example  .gitignore  =13.0.0  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 702841108473_init.py  a1b2c3d4e5f6_add_users_tables.py  b2c3d4e5f6g7_add_description_to_contacts.py  c3d4e5f6g7h8_add_global_settings.py  d4e5f6g7h8i9_add_video_distribution.py
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  base.py  langgraph_agent.py  rule_based.py  subscription_optin.py  video_distributor.py
app/api/: deps.py
app/api/v1/: agents.py  auth.py  contacts.py  debug.py  devices.py  ignore_rules.py  (+7 more)
app/core/: __init__.py  exceptions.py  jwt.py  security.py  telemetry.py
app/db/: __init__.py  session.py
app/models/: __init__.py  agent.py  api_key.py  base.py  contact.py  conversation.py  device.py  global_settings.py  ignore_rule.py  message.py  scheduled_message.py  user.py  user_device.py  video_distribution_job.py  video_send_history.py
app/schemas/: __init__.py  agent.py  api_key.py  common.py  contact.py  device.py  ignore_rule.py  message.py  scheduled_message.py  settings.py  user.py
app/services/: __init__.py  agent_runner.py  device_manager.py  llm_service.py  message_service.py  minio_client.py  queue.py  webhook_event_store.py  whatsapp_client.py
app/workers/: __init__.py  message_consumer.py  scheduler_worker.py  video_distributor_worker.py  websocket_listener.py
docs/: IMPLEMENTATION_PLAN.md  whatsapp_api.yaml
tests/: conftest.py
tests/integration/: test_websocket_listener.py
tests/unit/: test_device_manager.py  test_device_repository.py  test_message_repository.py  test_whatsapp_client.py
(+14 files in other folders)
