[project]
name = "whatsapp-management-api"
version = "1.0.0"
description = "Multi-device WhatsApp management platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "aio-pika>=9.5.0",
    "redis>=5.2.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.12",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "croniter>=3.0.0",
    "websockets>=13.0.0",
    "PyJWT[crypto]>=2.9.0",
    "cachetools>=5.5.0",
    "openai>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "aiosqlite>=0.20.0",
]
ai = [
    "openai>=1.50.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
observability = [
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-aio-pika>=0.49b0",
    "opentelemetry-instrumentation-redis>=0.49b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
